--- a/fuqua-class-ui/package.json
+++ b/fuqua-class-ui/package.json
@@ -19,7 +19,7 @@
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^4.0.1",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.0",
     "react-toastify": "^8.1.0",
     "tailwindcss": "^3.0.7",
     "typescript": "^4.5.4",
