--- a/fuqua-class-ui/package.json
+++ b/fuqua-class-ui/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^17.0.11",
     "@usedapp/core": "^0.7.1",
     "firebase": "^9.6.1",
+    "fusioncharts": "^3.18.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^4.0.1",
